manejo de usuarios y preparo para servidores