@@ -21,6 +21,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -70,14 +71,11 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of(
-                "http://localhost:3000",
-                "http://localhost:3001",
-                "http://10.109.150.7:3000",
-                "http://192.168.0.9:3000",
-                "http://10.124.192.7:3000",
-                "http://10.124.192.7:3001"
-        ));
+        String rawOrigins = System.getenv().getOrDefault(
+                "ALLOWED_ORIGINS",
+                "http://localhost:3000,http://localhost:3001"
+        );
+        config.setAllowedOrigins(Arrays.asList(rawOrigins.split(",")));
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
